--- a/TwinTiles/package.json
+++ b/TwinTiles/package.json
@@ -9,25 +9,15 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo-google-fonts/space-mono": "^0.4.2",
-    "@expo/vector-icons": "^15.0.3",
     "expo": "~54.0.33",
-    "expo-constants": "~18.0.13",
-    "expo-font": "~14.0.11",
-    "expo-linking": "~8.0.11",
-    "expo-router": "~6.0.23",
-    "expo-splash-screen": "^31.0.13",
+    "expo-router": "^6.0.23",
     "expo-status-bar": "~3.0.9",
-    "expo-vector-icons": "^10.0.1",
     "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "react-native": "0.81.5",
-    "react-native-safe-area-context": "~5.6.0",
-    "react-native-screens": "~4.16.0"
+    "react-native": "0.81.5"
   },
-  "private": true,
   "devDependencies": {
-    "@types/react": "~19.1.10",
+    "@types/react": "~19.1.0",
     "typescript": "~5.9.2"
-  }
+  },
+  "private": true
 }
