--- a/TwinTiles/app.json
+++ b/TwinTiles/app.json
@@ -2,11 +2,11 @@
   "expo": {
     "name": "TwinTiles",
     "slug": "TwinTiles",
+    "scheme": "twintiles",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
-    "newArchEnabled": true,
     "splash": {
       "image": "./assets/splash-icon.png",
       "resizeMode": "contain",
@@ -20,8 +20,7 @@
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "edgeToEdgeEnabled": true,
-      "predictiveBackGestureEnabled": false
+      "package": "com.anonymous.TwinTiles"
     },
     "web": {
       "favicon": "./assets/favicon.png"
