fixed bottom tab navigation and added home page and chapter select

--- a/TwinTiles/app.json
+++ b/TwinTiles/app.json
@@ -2,11 +2,11 @@
   "expo": {
     "name": "TwinTiles",
     "slug": "TwinTiles",
-    "scheme": "twintiles",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
+    "newArchEnabled": true,
     "splash": {
       "image": "./assets/splash-icon.png",
       "resizeMode": "contain",
@@ -20,7 +20,8 @@
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "package": "com.anonymous.TwinTiles"
+      "edgeToEdgeEnabled": true,
+      "predictiveBackGestureEnabled": false
     },
     "web": {
       "favicon": "./assets/favicon.png"
