--- a/TwinTiles/package.json
+++ b/TwinTiles/package.json
@@ -24,8 +24,10 @@
     "react-native-screens": "~4.16.0"
   },
   "devDependencies": {
+    "@expo/ngrok": "^4.1.3",
     "@types/react": "~19.1.0",
-    "typescript": "~5.9.2"
+    "typescript": "~5.9.2",
+    "@react-native-community/cli": "latest"
   },
   "private": true
 }
