--- a/TwinTiles/package.json
+++ b/TwinTiles/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native-stack": "^7.13.0",
     "@react-navigation/stack": "^7.7.2",
     "expo": "~54.0.33",
+    "expo-font": "~14.0.11",
     "expo-status-bar": "~3.0.9",
     "react": "19.1.0",
     "react-native": "0.81.5",
@@ -25,9 +26,9 @@
   },
   "devDependencies": {
     "@expo/ngrok": "^4.1.3",
+    "@react-native-community/cli": "latest",
     "@types/react": "~19.1.0",
-    "typescript": "~5.9.2",
-    "@react-native-community/cli": "latest"
+    "typescript": "~5.9.2"
   },
   "private": true
 }
